--- a/styles/styles.css
+++ b/styles/styles.css
@@ -276,6 +276,15 @@ main .section > div {
     margin-bottom: 25px;
     margin-left: 0;
   }
+
+  .section.info-vip > .area-features-wrapper +  .default-content-wrapper {
+    grid-row: 3/4;
+    margin: 0;
+  }
+
+  .section.info-vip > .area-features-wrapper +  .default-content-wrapper h2 {
+    margin: 0;
+  }
 }
 
 @media (min-width: 990px) and (max-width: 1200px) {
